--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
   </section>
   <footer>
-    <p>&copy; 2025 NexStudy. All rights reserved.</p>
+    <p>&copy; 2025 NexStudy. All rights reserved.dd</p>
   </footer>
 </body>
 </html>
