--- a/index.html
+++ b/index.html
@@ -701,8 +701,8 @@
 <!-- Contact Section -->
 <section id="contact" class="contact-section">
   <div class="container">
-    <h2 class="section-title">Contact Our Education Specialist</h2>
-    <p class="section-subtitle">Get personalized guidance for your international education journey.</p>
+    <h2 class="section-title" style="color: white;">Contact Our Education Specialist</h2>
+    <p class="section-subtitle"style="color: white;">Get personalized guidance for your international education journey.</p>
     <div class="contact-card" id="contact-card">
       <div class="contact-grid">
         <div class="contact-info">
